fix: Sidebar sash overflows

--- a/src/style/sidebar.less
+++ b/src/style/sidebar.less
@@ -293,6 +293,6 @@
         }
     }
     .sash {
-        height: calc(100% - 26px);
+        height: calc(100% - 26px - 40px);
     }
 }
